[package]
name = "NetworkUtils"
version = "0.0.0"
authors = ["Ahmetcan Aksu <ahmetcanco@gmail.com>"]
edition = "2018"
description = "Colletction of network protocols implemented for Cli and Libary"
license-file = "LICENSE"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cli"]
repository = "https://github.com/ahmtcn123/NetworkUtils"
readme = "README.md"
documentation = "https://docs.rs/wole"